[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://sounds/music/Menu.wav" type="AudioStream" id=7]
[ext_resource path="res://scripts/Music.gd" type="Script" id=8]
[ext_resource path="res://prefabs/Fade.tscn" type="PackedScene" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 135.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="TitleShadow" type="TextureRect" parent="Title"]
modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_left = 0.833333
margin_top = 0.583334
margin_right = 129.833
margin_bottom = 40.5833

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Play" type="Button" parent="Buttons"]
margin_left = 4.0
margin_top = 43.0
margin_right = 68.0
margin_bottom = 56.0
custom_constants/hseparation = -2
text = "Play"
clip_text = true

[node name="Options" type="Button" parent="Buttons"]
margin_left = 4.0
margin_top = 58.0
margin_right = 68.0
margin_bottom = 71.0
custom_constants/hseparation = -2
text = "Options"
clip_text = true

[node name="Credits" type="Button" parent="Buttons"]
margin_left = 4.0
margin_top = 73.0
margin_right = 68.0
margin_bottom = 86.0
custom_constants/hseparation = -2
text = "Credits"
clip_text = true

[node name="Right" type="Control" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -280.0
margin_top = -140.0
margin_right = -120.0
margin_bottom = -50.0

[node name="Quit" type="Button" parent="Buttons/Right"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 103.0
margin_top = 33.0
margin_right = 116.0
margin_bottom = 46.0
custom_constants/hseparation = -2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Buttons/Right/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4

[node name="Discord" type="Button" parent="Buttons/Right"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 103.0
margin_top = 18.0
margin_right = 116.0
margin_bottom = 31.0
custom_constants/hseparation = -2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="Buttons/Right/Discord"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 4

[node name="Fade" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Buttons/Right/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Buttons/Right/Discord" to="." method="_on_discord_pressed"]
